unpackaged/main/default/objects/Retool_Air_gapped_License__c/Retool_Air_gapped_License__c.object-meta.xml
<CustomObject>
    <label>Retool Air-gapped License</label>
    <nameField>
        <label>Retool Air-gapped License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retool Air-gapped Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>