unpackaged/main/default/objects/Retool_Air_gapped_License__c/fields/Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Entitlements__c</fullName>
    <formula>Time_Period__c&amp;&quot; | &quot;&amp;TEXT(Seat_Count__c)&amp;&quot; seats | &quot;&amp;SSO_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlements</label>
    <type>Text</type>
</CustomField>