unpackaged/main/default/objects/Retool_Air_gapped_License__c/fields/Expiration_Status__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Status__c</fullName>
    <formula>IF(
  Is_Expired__c,
  &quot;Expired (&quot;,
  &quot;Active (&quot;
)&amp;TEXT(Expiration_Date__c)&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Status</label>
    <type>Text</type>
</CustomField>