unpackaged/main/default/objects/Retool_Air_gapped_License__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <externalId>true</externalId>
    <label>ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>