unpackaged/main/default/objects/Retool_Air_gapped_License__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <formula>IF(TODAY() &gt; Expiration_Date__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired?</label>
    <type>Checkbox</type>
</CustomField>