unpackaged/main/default/objects/Retool_Air_gapped_License__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>