unpackaged/main/default/objects/Retool_Air_gapped_License__c/fields/Nonce__c.field-meta.xml
<CustomField>
    <fullName>Nonce__c</fullName>
    <label>Nonce</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>