unpackaged/main/default/objects/Retool_Air_gapped_License__c/fields/Retool_License__c.field-meta.xml
<CustomField>
    <fullName>Retool_License__c</fullName>
    <label>Retool License</label>
    <referenceTo>Retool_License__c</referenceTo>
    <relationshipLabel>Air-gapped Licenses</relationshipLabel>
    <relationshipName>Retool_Air_gapped_Licenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>