unpackaged/main/default/objects/Retool_Air_gapped_License__c/fields/Seat_Count__c.field-meta.xml
<CustomField>
    <fullName>Seat_Count__c</fullName>
    <label>Seat Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>